--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-<!-- Your HTML Here -->
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+
+    <script src="main.js" defer></script>
+  </head>
+  <!-- Your HTML Here -->
+  <body>
+    <div class="container">
+      <div class="carousel">
+        <div class="controls">
+          <button id="back"><</button>
+          <button id="forward">></button>
+        </div>
+        <div class="cards">
+          <div class="card">
+            <h1>Nicholas Aquilina</h1>
+          </div>
+          <div class="card">
+            <h1>One</h1>
+          </div>
+          <div class="card">
+            <h1>Two</h1>
+          </div>
+          <div class="card">
+            <h1>Three</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
