--- a/index.html
+++ b/index.html
@@ -13,19 +13,12 @@
         <div class="controls">
           <button id="back"><</button>
           <button id="forward">></button>
+          <button id="flip">Flip!</button>
         </div>
         <div class="cards">
           <div class="card">
-            <h1>Nicholas Aquilina</h1>
-          </div>
-          <div class="card">
-            <h1>One</h1>
-          </div>
-          <div class="card">
-            <h1>Two</h1>
-          </div>
-          <div class="card">
-            <h1>Three</h1>
+            <div class="front">Front</div>
+            <div class="back">Back</div>
           </div>
         </div>
       </div>
