reworked back/forward buttons

--- a/index.html
+++ b/index.html
@@ -10,17 +10,32 @@
   <body>
     <div class="container">
       <div class="carousel">
-        <div class="controls">
-          <button id="back"><</button>
-          <button id="forward">></button>
-          <button id="flip">Flip!</button>
-        </div>
+        <button id="back"><</button>
         <div class="cards">
+          <div class="card">
+            <div class="front">
+              <img>
+            </div>
+            <div class="back">
+              <h1>I'm Nicholas Aquilina</h1>
+              <p>Hello, world!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="front">Front</div>
+            <div class="back">Back</div>
+          </div>
+          <div class="card">
+            <div class="front">Front</div>
+            <div class="back">Back</div>
+          </div>
           <div class="card">
             <div class="front">Front</div>
             <div class="back">Back</div>
           </div>
         </div>
+        <button id="forward">></button>
+        <h3 class="label">Click to flip!</h3>
       </div>
     </div>
   </body>
