added looping background effect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="cards">
           <div class="card">
             <div class="front">
-              <img>
+              <img />
             </div>
             <div class="back">
               <h1>I'm Nicholas Aquilina</h1>
