minor aesthetic changes + numbered cards

--- a/index.html
+++ b/index.html
@@ -14,23 +14,55 @@
         <div class="cards">
           <div class="card">
             <div class="front">
-              <img />
+              <div
+                class="cardback"
+                style="background-image: url(imgs/sample.webp)"
+              >
+                <h1>Num</h1>
+              </div>
             </div>
             <div class="back">
               <h1>I'm Nicholas Aquilina</h1>
-              <p>Hello, world!</p>
+              <p>I'm a first year CS major from Austin, Texas.</p>
             </div>
           </div>
           <div class="card">
-            <div class="front">Front</div>
-            <div class="back">Back</div>
+            <div class="front">
+              <div
+                class="cardback"
+                style="background-image: url(imgs/sample.webp)"
+              >
+                <h1>Num</h1>
+              </div>
+            </div>
+            <div class="back">
+              <h1>I'm Nicholas Aquilina</h1>
+              <p>I'm a first year CS major from Austin, Texas.</p>
+            </div>
           </div>
           <div class="card">
-            <div class="front">Front</div>
-            <div class="back">Back</div>
+            <div class="front">
+              <div
+                class="cardback"
+                style="background-image: url(imgs/sample.webp)"
+              >
+                <h1>Num</h1>
+              </div>
+            </div>
+            <div class="back">
+              <h1>I'm Nicholas Aquilina</h1>
+              <p>I'm a first year CS major from Austin, Texas.</p>
+            </div>
           </div>
           <div class="card">
-            <div class="front">Front</div>
+            <div class="front">
+              <div
+                class="cardback"
+                style="background-image: url(imgs/sample.webp)"
+              >
+                <h1>Num</h1>
+              </div>
+            </div>
             <div class="back">Back</div>
           </div>
         </div>
