filled each card with content

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <title>Nicholas Aquilina</title>
     <link rel="stylesheet" href="styles.css" />
 
     <script src="main.js" defer></script>
@@ -16,14 +17,75 @@
             <div class="front">
               <div
                 class="cardback"
-                style="background-image: url(imgs/sample.webp)"
+                style="background-image: url(imgs/portrait.png)"
               >
                 <h1>Num</h1>
               </div>
             </div>
             <div class="back">
-              <h1>I'm Nicholas Aquilina</h1>
-              <p>I'm a first year CS major from Austin, Texas.</p>
+              <h1>I'm Nicholas Aquilina.</h1>
+              <h3>
+                I'm a first year Computer Science major. I selected Information
+                Internetworks & Media as my threads and I'm an aspiring software
+                developer.
+              </h3>
+            </div>
+          </div>
+          <div class="card">
+            <div class="front">
+              <div
+                class="cardback"
+                style="background-image: url(imgs/austin.jpg)"
+              >
+                <h1>Num</h1>
+              </div>
+            </div>
+            <div class="back">
+              <h1>I'm from Austin, Texas.</h1>
+              <h3>
+                However, I've only lived there for two years. I was born in PA,
+                lived in GA as a kid and then moved to WA before ending up in
+                TX.
+              </h3>
+            </div>
+          </div>
+          <div class="card">
+            <div class="front">
+              <div
+                class="cardback"
+                style="background-image: url(imgs/game.png)"
+              >
+                <h1>Num</h1>
+              </div>
+            </div>
+            <div class="back">
+              <h1>I'm a developer on Roblox.</h1>
+              <h3>
+                I have a passion for 3D modeling and programming. I leveraged
+                this by creating several games on Roblox and by operating my own
+                storefront selling virtual, 3D modeled accessories under my
+                studio FUNicular.
+              </h3>
+            </div>
+          </div>
+          <div class="card">
+            <div class="front">
+              <div
+                class="cardback"
+                style="background-image: url(imgs/pillar.png)"
+              >
+                <h1>Num</h1>
+              </div>
+            </div>
+            <div class="back">
+              <h1>I used my skills to help others.</h1>
+              <h3>
+                As a kid, I was inspired by the other games I played.
+                Remembering how hard it was to learn all the skills I needed to
+                finally make a successful game, I tutored young creators with
+                software such as Blender and helped people to launch their own
+                games through advice and mentorship.
+              </h3>
             </div>
           </div>
           <div class="card">
@@ -36,34 +98,13 @@
               </div>
             </div>
             <div class="back">
-              <h1>I'm Nicholas Aquilina</h1>
-              <p>I'm a first year CS major from Austin, Texas.</p>
+              <h1>I know from my expriences that my skills can help others.</h1>
+              <h3>
+                I hope for the opportunity at Bits of Good to broaden my
+                skillset and meet other likeminded developers with which I can
+                make an impact.
+              </h3>
             </div>
-          </div>
-          <div class="card">
-            <div class="front">
-              <div
-                class="cardback"
-                style="background-image: url(imgs/sample.webp)"
-              >
-                <h1>Num</h1>
-              </div>
-            </div>
-            <div class="back">
-              <h1>I'm Nicholas Aquilina</h1>
-              <p>I'm a first year CS major from Austin, Texas.</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="front">
-              <div
-                class="cardback"
-                style="background-image: url(imgs/sample.webp)"
-              >
-                <h1>Num</h1>
-              </div>
-            </div>
-            <div class="back">Back</div>
           </div>
         </div>
         <button id="forward">></button>
