changed portrait image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="front">
               <div
                 class="cardback"
-                style="background-image: url(imgs/portrait.png)"
+                style="background-image: url(imgs/portrait.png); background-position: 42%;"
               >
                 <h1>Num</h1>
               </div>
